--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/hbs": "^4.0.0",
     "@types/jest": "^22.2.3",
     "@types/lodash": "^4.14.116",
+    "@types/mongodb": "^3.1.10",
     "@types/node": "^10.10.3",
     "@types/shelljs": "^0.8.0",
     "@types/supertest": "^2.0.6",
@@ -50,6 +51,7 @@
     "express-validator": "^5.3.0",
     "hbs": "^4.0.1",
     "lodash": "^4.17.11",
+    "mongodb": "^3.1.6",
     "save-dev": "^2.0.0",
     "shelljs": "^0.8.2"
   },
