--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript": "^2.9.2"
   },
   "dependencies": {
+    "@types/node-powershell": "^3.1.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
     "errorhandler": "^1.5.0",
@@ -50,6 +51,7 @@
     "express-validator": "^5.3.0",
     "hbs": "^4.0.1",
     "lodash": "^4.17.11",
+    "node-powershell": "^3.3.1",
     "save-dev": "^2.0.0",
     "shelljs": "^0.8.2"
   },
