--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "express-validator": "^5.3.0",
     "hbs": "^4.0.1",
     "lodash": "^4.17.11",
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.3",
     "node-powershell": "^3.3.1",
     "save-dev": "^2.0.0",
     "shelljs": "^0.8.2"
